--- a/LazzyBee/Home/HomeViewController.xib
+++ b/LazzyBee/Home/HomeViewController.xib
@@ -10,6 +10,7 @@
                 <outlet property="adBanner" destination="p2F-ej-RXx" id="2OP-qo-txP"/>
                 <outlet property="btnIncoming" destination="Cyx-GS-o4g" id="csQ-70-mzH"/>
                 <outlet property="btnMore" destination="sLV-yZ-Cel" id="yPk-4A-1wS"/>
+                <outlet property="btnReverse" destination="vh1-6D-y6u" id="UqC-OD-G7x"/>
                 <outlet property="btnStudy" destination="w5M-iS-gU2" id="aeA-3x-rLB"/>
                 <outlet property="txtSearchbox" destination="523-A7-uj3" id="3CX-Cb-VDx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -36,8 +37,8 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="w5M-iS-gU2">
-                            <rect key="frame" x="8" y="0.0" width="304" height="38"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <rect key="frame" x="8" y="0.0" width="149" height="38"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <state key="normal" title="Start Learning" backgroundImage="button_long.png"/>
                             <connections>
@@ -60,6 +61,15 @@
                             <state key="normal" title="More Words" backgroundImage="button_short.png"/>
                             <connections>
                                 <action selector="btnMoreWordClick:" destination="-1" eventType="touchUpInside" id="55I-dy-5Kg"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="vh1-6D-y6u">
+                            <rect key="frame" x="163" y="0.0" width="149" height="38"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="Reverse" backgroundImage="button_short_gray.png"/>
+                            <connections>
+                                <action selector="btnReverseClick:" destination="-1" eventType="touchUpInside" id="YNz-iv-huH"/>
                             </connections>
                         </button>
                     </subviews>
@@ -107,6 +117,7 @@
         <image name="big_logo.png" width="300" height="300"/>
         <image name="button_long.png" width="334" height="40"/>
         <image name="button_short.png" width="150" height="40"/>
+        <image name="button_short_gray.png" width="150" height="40"/>
         <image name="ic_search_gray.png" width="25" height="25"/>
     </resources>
 </document>
