--- a/LazzyBee/Mainsreen/SearchViewController.xib
+++ b/LazzyBee/Mainsreen/SearchViewController.xib
@@ -32,7 +32,7 @@
                     <rect key="frame" x="8" y="75" width="304" height="40"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="textColor" red="0.77195785979999998" green="0.3542815708" blue="0.36043231520000002" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" id="sOX-Hg-Yhh">
