--- a/LazzyBee/Home/BarGraphViewController.xib
+++ b/LazzyBee/Home/BarGraphViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BarGraphViewController">
@@ -10,6 +10,7 @@
                 <outlet property="btnShare" destination="t7l-uw-22v" id="wrY-E0-JeS"/>
                 <outlet property="graphView" destination="322-XD-c5X" id="edw-GG-Hln"/>
                 <outlet property="imgRingStreak" destination="H20-2j-5F0" id="51Z-31-k1W"/>
+                <outlet property="lbLink" destination="Pqa-JN-Goz" id="He6-nK-NGZ"/>
                 <outlet property="lbStreakCount" destination="CbS-VQ-UW5" id="kjG-fP-yTO"/>
                 <outlet property="lbTotal" destination="hZI-r2-WJO" id="HE5-t9-cJs"/>
                 <outlet property="scrollViewContainer" destination="NMm-yR-kqt" id="mYo-ed-se3"/>
@@ -29,46 +30,38 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hZI-r2-WJO">
                             <rect key="frame" x="8" y="13" width="304" height="21"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <animations/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" id="322-XD-c5X" customClass="GKBarGraph">
-                            <rect key="frame" x="8" y="40" width="304" height="200"/>
+                            <rect key="frame" x="8" y="37" width="304" height="200"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <animations/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
                         <view contentMode="scaleToFill" id="uEk-Vh-I42">
-                            <rect key="frame" x="60" y="248" width="200" height="200"/>
+                            <rect key="frame" x="60" y="243" width="200" height="200"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bee60.png" id="AyP-SB-OhA">
                                     <rect key="frame" x="69" y="52" width="60" height="60"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                    <animations/>
                                 </imageView>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="streak_ring.png" id="H20-2j-5F0">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <animations/>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4 days" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" id="CbS-VQ-UW5">
                                     <rect key="frame" x="61" y="120" width="77" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                    <animations/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <animations/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="t7l-uw-22v">
-                            <rect key="frame" x="85" y="456" width="150" height="40"/>
+                            <rect key="frame" x="85" y="479" width="150" height="40"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <animations/>
                             <state key="normal" title="Share" backgroundImage="button_short.png">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -76,14 +69,30 @@
                                 <action selector="btnShareClick:" destination="-1" eventType="touchUpInside" id="HeE-ly-AZr"/>
                             </connections>
                         </button>
+                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2000 words/year with 5 minutes per day" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Pqa-JN-Goz">
+                            <rect key="frame" x="8" y="442" width="304" height="21"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <gestureRecognizers/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                            <connections>
+                                <outletCollection property="gestureRecognizers" destination="Jan-4d-Pv8" appends="YES" id="vEH-YN-HgY"/>
+                            </connections>
+                        </label>
                     </subviews>
-                    <animations/>
                 </scrollView>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <point key="canvasLocation" x="259" y="336"/>
         </view>
+        <tapGestureRecognizer id="Jan-4d-Pv8">
+            <connections>
+                <action selector="tapOnLinkHandle:" destination="-1" id="HxW-PO-99j"/>
+                <outlet property="delegate" destination="-1" id="ci7-jw-tnv"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="bee60.png" width="60" height="60"/>
