--- a/LazzyBee/Home/HomeViewController.xib
+++ b/LazzyBee/Home/HomeViewController.xib
@@ -29,22 +29,13 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="big_logo.png" id="vXe-kW-w7z">
-                    <rect key="frame" x="70" y="103" width="180" height="180"/>
+                    <rect key="frame" x="80" y="103" width="160" height="160"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <view contentMode="scaleToFill" id="3Ya-xE-VYf">
-                    <rect key="frame" x="0.0" y="310" width="320" height="93"/>
+                    <rect key="frame" x="0.0" y="283" width="320" height="93"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="w5M-iS-gU2">
-                            <rect key="frame" x="8" y="0.0" width="149" height="38"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <state key="normal" title="Start Learning" backgroundImage="button_long.png"/>
-                            <connections>
-                                <action selector="btnStudyClick:" destination="-1" eventType="touchUpInside" id="yAD-81-Bkl"/>
-                            </connections>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Cyx-GS-o4g">
                             <rect key="frame" x="8" y="47" width="149" height="38"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -55,7 +46,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="sLV-yZ-Cel">
-                            <rect key="frame" x="163" y="0.0" width="149" height="38"/>
+                            <rect key="frame" x="165" y="47" width="149" height="38"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <state key="normal" title="More Words" backgroundImage="button_short.png"/>
@@ -63,13 +54,13 @@
                                 <action selector="btnMoreWordClick:" destination="-1" eventType="touchUpInside" id="55I-dy-5Kg"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="vh1-6D-y6u">
-                            <rect key="frame" x="163" y="47" width="149" height="38"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <state key="normal" title="Reverse" backgroundImage="button_short_gray.png"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="w5M-iS-gU2">
+                            <rect key="frame" x="8" y="0.0" width="306" height="38"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <state key="normal" title="Start Learning" backgroundImage="button_long.png"/>
                             <connections>
-                                <action selector="btnReverseClick:" destination="-1" eventType="touchUpInside" id="YNz-iv-huH"/>
+                                <action selector="btnStudyClick:" destination="-1" eventType="touchUpInside" id="yAD-81-Bkl"/>
                             </connections>
                         </button>
                     </subviews>
@@ -108,16 +99,26 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="vh1-6D-y6u">
+                    <rect key="frame" x="262" y="450" width="50" height="50"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <state key="normal" image="bee.png"/>
+                    <connections>
+                        <action selector="btnReverseClick:" destination="-1" eventType="touchUpInside" id="YNz-iv-huH"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <point key="canvasLocation" x="443" y="219"/>
         </view>
     </objects>
     <resources>
+        <image name="bee.png" width="40" height="40"/>
         <image name="big_logo.png" width="300" height="300"/>
         <image name="button_long.png" width="334" height="40"/>
         <image name="button_short.png" width="150" height="40"/>
-        <image name="button_short_gray.png" width="150" height="40"/>
         <image name="ic_search_gray.png" width="25" height="25"/>
     </resources>
 </document>
