--- a/LazzyBee/Home/HomeViewController_iPad.xib
+++ b/LazzyBee/Home/HomeViewController_iPad.xib
@@ -46,25 +46,16 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ENb-XN-REN">
-                            <rect key="frame" x="8" y="0.0" width="374" height="45"/>
+                            <rect key="frame" x="8" y="0.0" width="752" height="45"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                            <state key="normal" title="Start Learning" backgroundImage="button_short_ipad.png"/>
+                            <state key="normal" title="Start Learning" backgroundImage="button_long_ipad.png"/>
                             <connections>
                                 <action selector="btnStudyClick:" destination="-1" eventType="touchUpInside" id="jpY-aC-qqe"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="vB5-bh-dSs">
-                            <rect key="frame" x="386" y="58" width="374" height="45"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                            <state key="normal" title="Reverse" backgroundImage="button_short_ipad_gray.png"/>
-                            <connections>
-                                <action selector="btnReverseClick:" destination="-1" eventType="touchUpInside" id="pjv-Wh-VAP"/>
-                            </connections>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="E9M-1w-NbD">
-                            <rect key="frame" x="386" y="0.0" width="374" height="45"/>
+                            <rect key="frame" x="386" y="58" width="374" height="45"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                             <state key="normal" title="More Words" backgroundImage="button_short_ipad.png"/>
@@ -108,15 +99,26 @@
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="vB5-bh-dSs">
+                    <rect key="frame" x="700" y="896" width="60" height="60"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <state key="normal" image="bee.png"/>
+                    <connections>
+                        <action selector="btnReverseClick:" destination="-1" eventType="touchUpInside" id="pjv-Wh-VAP"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <point key="canvasLocation" x="339" y="326"/>
         </view>
     </objects>
     <resources>
+        <image name="bee.png" width="40" height="40"/>
         <image name="big_logo.png" width="300" height="300"/>
+        <image name="button_long_ipad.png" width="667" height="40"/>
         <image name="button_short_ipad.png" width="300" height="40"/>
-        <image name="button_short_ipad_gray.png" width="300" height="40"/>
         <image name="ic_search_gray.png" width="25" height="25"/>
     </resources>
 </document>
