--- a/LazzyBee/List/StudiedListViewController.xib
+++ b/LazzyBee/List/StudiedListViewController.xib
@@ -30,10 +30,11 @@
                             <rect key="frame" x="8" y="4" width="304" height="21"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <view contentMode="scaleToFill" id="cWc-G0-zBn">
                     <rect key="frame" x="0.0" y="30" width="320" height="485"/>
