--- a/LazzyBee/CustomView/SaveStreakView.xib
+++ b/LazzyBee/CustomView/SaveStreakView.xib
@@ -12,8 +12,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SaveStreakView">
             <connections>
                 <outlet property="btnSubmit" destination="LkK-xr-CbK" id="621-ay-7yC"/>
+                <outlet property="lbSaveStreakTitle" destination="DBb-iR-5Qk" id="8pF-sR-01g"/>
+                <outlet property="saveStreakGuide" destination="X5e-mj-e4R" id="Y5E-71-XQi"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="viewContainer" destination="B8T-Sr-CNs" id="UgX-mW-LDN"/>
+                <outlet property="viewContainer" destination="B8T-Sr-CNs" id="My9-e9-hVN"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,8 +23,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" id="B8T-Sr-CNs">
-                    <rect key="frame" x="46" y="217" width="283" height="141"/>
+                <view clipsSubviews="YES" alpha="0.0" contentMode="scaleToFill" misplaced="YES" id="B8T-Sr-CNs">
+                    <rect key="frame" x="46" y="457" width="283" height="141"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="6UO-hs-9AY">
@@ -34,7 +36,7 @@
                                 <action selector="cancelBtnClick:" destination="-1" eventType="touchUpInside" id="P9O-lJ-cKg"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Save streak" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DBb-iR-5Qk">
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Save streak" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DBb-iR-5Qk">
                             <rect key="frame" x="41" y="4" width="214" height="21"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
@@ -42,7 +44,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="LkK-xr-CbK">
-                            <rect key="frame" x="66" y="103" width="151" height="30"/>
+                            <rect key="frame" x="66" y="105" width="151" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                             <state key="normal" title="Watch Ads"/>
@@ -50,10 +52,10 @@
                                 <action selector="btnWatchClick:" destination="-1" eventType="touchUpInside" id="D95-Eg-Yin"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Watch Ads to save one day streak in last 7 days." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="X5e-mj-e4R">
-                            <rect key="frame" x="8" y="31" width="267" height="68"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="You had missed %d day(s) in the last seven days. Watch Ads to save one day streak." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="X5e-mj-e4R">
+                            <rect key="frame" x="8" y="17" width="267" height="87"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
